fix: increase tabs z-index

--- a/src/styles/_ui-elements.scss
+++ b/src/styles/_ui-elements.scss
@@ -22,6 +22,8 @@
 }
 
 .vmp-tabs {
+  z-index: 999999;
+
   .tab-item {
     color: $positive;
 
